--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MedicalReport">
+        <activity android:name=".DoctorVisit"></activity>
+        <activity android:name=".Diseases" />
+        <activity
+            android:name=".MedicalReport"
+            android:label="@string/title_activity_medical_report"
+            android:theme="@style/Theme.MedicalReport.NoActionBar" />
+        <activity android:name=".Medication" />
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
