--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MedicalReport">
-
+        <activity android:name=".LoginActivity" />
         <activity android:name=".SignUp" />
         <activity android:name=".SplashScreen">
             <intent-filter>
@@ -18,16 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-        </activity>
 
         <activity android:name=".MainActivity" />
+        <activity android:name=".Diseases" />
+        <activity android:name=".DoctorVisit" />
     </application>
 
 </manifest>
