--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.medical.medicalreport">
 
     <application
@@ -9,6 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MedicalReport">
+        <activity android:name=".Disease_info"/>
         <activity android:name=".LoginActivity" />
         <activity android:name=".SignUp" />
         <activity android:name=".SplashScreen">
@@ -18,11 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity android:name=".MainActivity" />
         <activity android:name=".Diseases" />
         <activity android:name=".DoctorVisit" />
+        <activity android:name=".MedicalReport"/>
     </application>
 
 </manifest>
