--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Diseases" />
         <activity android:name=".DoctorVisit" />
+        <activity android:name=".MedicalReport" />
+        <activity android:name=".Medication" />
     </application>
 
 </manifest>
