--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <activity android:name=".DoctorVisit" />
         <activity android:name=".MedicalReport" />
         <activity android:name=".Medication" />
+        <activity android:name=".Disease_info" />
+
+
     </application>
 
 </manifest>
